# MetaTensor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/includes/: AbstractTilingService.hpp  Calculator.hpp  Dims.hpp  ECompiler.hpp  ExprBlock.hpp  ExprCompiler.hpp  Layout.hpp  LayoutProvider.hpp  Literals.hpp  MatrixFormat.hpp  MatrixFormats.hpp  MatrixTilingProvider.hpp  MatrixTilingService.hpp  TOperand.hpp  TOperator.hpp  TRange.hpp  TTiling.hpp  Tensor.hpp  TensorFormat.hpp  TensorLayout.hpp  TensorOps.hpp  Test.hpp  Tiling.hpp  TilingProvider.hpp  TilingService.hpp  Utils.hpp  VectorFormat.hpp  VectorTilingService.hpp  calc.hpp
src/includes/backend/x86/: x86_unary.hpp
src/includes/operators/: Operator.hpp
src/includes/xforms/: AllocTensor.hpp  CodeGen.hpp  GenIR.hpp  Placeholder.hpp  PrintIR.hpp  XformUtils.hpp  Xforms.hpp
test/: CMakeLists.txt  TestAllocTensor.cpp  TestCalculator.cpp  TestCodeGen.cpp  TestDims.cpp  TestECompiler.cpp  TestExprBlock.cpp  TestExprCompiler.cpp  TestExprList.cpp  TestGenIR.cpp  TestLayout.cpp  TestLiterals.cpp  TestOperator.cpp  TestTensor.cpp  TestTensorFormat.cpp  TestTensorOps.cpp  TestTensorOps2.cpp  TestTiling.cpp  TestTilingProvider.cpp  TestTilingService.cpp  TestUtils.cpp  test.cpp
